--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,8 @@
 <h1>A simple Coin Calculator</h1>
 
 <img id='main-img' src='/images/2013-Underground.jpeg' alt='2013 Underground 2 pound coin'>
+<form action='/calculate' method='post'>
+  <label for='pennies'>Amount in pennies</label>
+  <input type='text' id='pennies' name='pennies' placeholder='Enter amount in pennies .. ' maxlength='10'/>
+  <input type='submit' value='Calculate'/>
+</form>
