Refactor index and layout pages
- put common items (image and h1) in layout

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
 </head>
 <body>
+  <h1>A simple Coin Calculator</h1>
+
+  <img id='main-img' src='/images/2013-Underground.jpeg' alt='2013 Underground 2 pound coin'>
+
   <%= yield %>
 </body>
 </html>
