--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UK Coin Calculator</title>
+    <title>Coinly - A UK Coin Calculator</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
