Add error message when no amount is entered
- add + register ‘sinatra-flash’
- enable sessions
- add appropriate message
- display message

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,6 @@
+<section>
+  <%= styled_flash %>
+</section>
 <form action='/calculate' method='post'>
   <div class="large-3 medium-3 columns">
     <label for='amount'>Amount</label>
