--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,6 +14,10 @@
       </div>
       <div>
         <img id='main-img' src='/images/2013-Underground.jpeg' alt='2013 Underground 2 pound coin'>
+        <div data-alert class="alert-box" id="flash-type">
+          <%= styled_flash %>
+          <a href="#" class="close">&times;</a>
+        </div>
         <%= yield %>
       </div>
     </div>
