Tidy up main page
- add ‘nav bar’ section
- add ‘About’ route ‘/about’
- add ‘About’ page
- include a link to navigate to the ‘about’ page
- include ‘font-awesome’ for icons on buttons
- change name to ‘Coiny’
- move ‘h1’ to ‘index’ view

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,6 @@
+<div class="large-12 columns" id="main-h1-heading">
+  <h1>A simple Coin Calculator</h1>
+</div>
 <form action='/calculate' method='post'>
   <div class="large-3 medium-3 columns">
     <label for='amount'>Amount</label>
