--- a/app/views/result.erb
+++ b/app/views/result.erb
@@ -1,4 +1,4 @@
-<p id='result'>Here is the minimum number of coins for your request of <%= @amount %> pence.</p>
+<p id='result'>Here is the minimum number of coins for your request of <span id='requested-amount'><%= @amount %></span> pence.</p>
 
 <table>
   <thead>
