Style input / buttons
- cannot directly style a ‘input’ button of type ‘submit’
- use jQuery AJAX to send POST request (intention)
- style button using Foundation icons
- alter layout

--- a/app/assets/scss/app.scss
+++ b/app/assets/scss/app.scss
@@ -14,6 +14,17 @@ p#result {
   font-style: bold;
   font-size: 22px;
 }
+
+.fi-pound.style-medium {
+  font-size: 28px;
+  color: red;
+}
+
+.fi-refresh.style-medium {
+  font-size: 22px;
+  color: yellow;
+}
+
 .alert-box {
   margin: 2rem 0;
 }
