--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,11 +2,12 @@
   <h1>A simple Coin Calculator</h1>
 </div>
 <form action='/calculate' method='post'>
-  <div class="large-3 medium-3 columns">
+  <div class="large-4 medium-4 columns">
     <label for='amount'>Amount</label>
     <input type='text' id='amount' name='amount' placeholder='Enter amount .. ' maxlength='10'/>
   </div>
+
   <div class="large-6 medium-6 columns">
-    <input type='submit' value='Calculate' class="button small"/>
+    <a href="#" class="button small radius" id="submit-amount">Calculate <i class="fi-refresh style-medium"></i></a>
   </div>
 </form>
