Styling buttons and making submit ‘/calculate’ work
- found another way to achieve result without using AJAX

Happy ;-)

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,7 +7,10 @@
     <input type='text' id='amount' name='amount' placeholder='Enter amount .. ' maxlength='10'/>
   </div>
 
-  <div class="large-6 medium-6 columns">
-    <a href="#" class="button small radius" id="submit-amount">Calculate <i class="fi-refresh style-medium"></i></a>
+  <div class="large-8 medium-8 columns">
+    <button type="submit" class="btn btn-primary radius tiny submit-btn">
+      <i class="fi-refresh style-medium"></i> Calculate
+    </button>
   </div>
+
 </form>
