Add some styling to the navigation bar

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,10 +19,10 @@
 
         <section class="top-bar-section">
           <ul class="left">
-            <li><a href="/">Coiny</a></li>
+            <li><a href="/" id="coiny">Coiny</a></li>
           </ul>
           <ul class="right">
-            <li><a href="/about">About</a></li>
+            <li><a href="/about" id="about">About</a></li>
           </ul>
         </section>
       </nav>
