--- a/app/assets/scss/app.scss
+++ b/app/assets/scss/app.scss
@@ -33,3 +33,20 @@ button.tiny.submit-btn {
   font-size: 0.875rem;
   margin-top: 0.9rem;
 }
+// Add some styling for hovering on desktop menu
+.top-bar-section a#coiny, a#about {
+  color: white;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s;
+  -ms-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.top-bar-section a#coiny:hover, a#about:hover {
+  // color: red;
+  background: #56544F;
+  border-radius: 15px;
+  color: yellow;
+  text-shadow: -1px 1px 5px #03c, 1px -1px 5px #03c;
+}
