--- a/app/assets/scss/app.scss
+++ b/app/assets/scss/app.scss
@@ -3,6 +3,11 @@
 
 @import "partials/fonts";
 
+#main-img {
+  height: 361px;
+  width: 603px;
+}
+
 p#result {
   margin-top: 3rem;
   margin-bottom: 3rem;
