--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -26,13 +26,17 @@
           </ul>
         </section>
       </nav>
-      <div>
-        <img id='main-img' src='/images/2013-Underground.jpeg' alt='2013 Underground 2 pound coin'>
+      <div class='small-12 small-centered columns'>
+      <div class='small-8 small-centered columns'>
+        <img class='' id='main-img' src='/images/2013-Underground.jpeg' alt='2013 Underground 2 pound coin'>
+      </div>
         <div data-alert class="alert-box round" id="flash-type">
           <%= styled_flash %>
           <a href="#" class="close">&times;</a>
         </div>
-        <%= yield %>
+        <div class="small-9 small-centered columns">
+          <%= yield %>
+        </div>
       </div>
     </div>
     <%= js :libs %>
