Display the relevant icons

--- a/app/views/about.erb
+++ b/app/views/about.erb
@@ -3,9 +3,9 @@
 <p id='about'>Coiny is a demonstration of the following technologies:</p>
 <ul>
   <li>Sinatra (Modular Application)</li>
-  <li>HTMl5</li>
-  <li>CSS3</li>
+  <li>HTMl5 <i class="fi-html5 style-large"></i></li>
+  <li>CSS3 <i class="fi-css3 style-large"></i></li>
   <li>jQuery</li>
-  <li>Foundation 5 <span>by Zurb</span></li>
+  <li>Foundation 5 <span>by Zurb</span> <i class="fi-social-zurb style-large"></i></li>
 </ul>
 <p>Author: Digital-Learner</p>
